Update For PostGreSQL connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/Park
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
+spring.flyway.url = jdbc:postgresql://localhost:5432/Park
+spring.flyway.user = postgres
+spring.flyway.password = 1234
+spring.flyway.locations = classpath:db/migrations
